# ComfyUI_BiRefNet_ll

./: LICENSE  README.md  README_CN.md  __init__.py  birefnetNode.py  pyproject.toml  requirements.txt  util.py
.github/workflows/: publish.yml
birefnet/: config.py  dataset.py  image_proc.py  utils.py
birefnet/models/: birefnet.py
birefnet/models/backbones/: build_backbone.py  pvt_v2.py  swin_v1.py
birefnet/models/modules/: aspp.py  decoder_blocks.py
birefnet/models/refinement/: refiner.py  stem_layer.py
birefnet_old/: config.py  dataset.py  utils.py
birefnet_old/models/: birefnet.py
birefnet_old/models/backbones/: build_backbone.py  pvt_v2.py  swin_v1.py
birefnet_old/models/modules/: aspp.py  decoder_blocks.py  ing.py  lateral_blocks.py  mlp.py
birefnet_old/models/refinement/: refiner.py  stem_layer.py
