[project]
name = "comfyui_birefnet_ll"
description = "Sync with version of BiRefNet. NODES:AutoDownloadBiRefNetModel, LoadRembgByBiRefNetModel, RembgByBiRefNet."
version = "1.0.3"
license = {file = "LICENSE"}
dependencies = ["numpy<2", "opencv-python", "scipy", "timm"]

[project.urls]
Repository = "https://github.com/lldacing/ComfyUI_BiRefNet_ll"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lldacing"
DisplayName = "ComfyUI_BiRefNet_ll"
Icon = ""
